webapp/src/main/webapp/themes/wilma/css/wilma.css
/* ... */
.collapseArrow {
    background:url(../images/green_minus_sign.gif) right center no-repeat;
    min-height:18px;
}

/* ------------------------------------------------->  */
/* CAPABILITY MAP  --------------------------------->  */
/* ------------------------------------------------->  */

#wrapper-content #main-content #container {
    width: initial !important;
    margin-left: initial !important;
}

#helptext {
    width: 100%;
}


#right-container {
    width: 100%;
    position: relative;
    float: left;
}

.tabs {
    width: 100%;
}

.tabs ul.titles li a, .tabs ul.titles li a{
    width: 50%;
}

#center-container {
    position: relative;
    width: 100% !important;
}

@media (min-width: 768px) {
    #adminDashboard .pageBodyGroup {
        flex: 0 0 auto;
        width: 50%;
    }

    #right-container {
        width: 30%;
        position: absolute;
    }

    #helptext {
        width: 70%;
        padding-right: 10px;
    }

    #center-container {
        position: absolute;
    }
    
}

#cutofflabel {
    width: initial;
}

#queryform input[type="text"], select, input[type="password"]{
    max-width: 100%;
}

#queryCutoff {
    margin-left: -54px;
}

#infovis {
    width: 100% !important;
}

#infovis > svg {
    width: 100% !important;
}

/* Author Network */

.propertyTabsList {
    display: flex;
}

#body {
    min-width: initial;
}

#chord {
    width: 100%;
    overflow: auto;
}

#chord > svg {
    width: 100%;
}

#sparkline-container-full > #publication-count-sparkline-include {
    width: 100%;
    margin-bottom: 0px;
}


#sparkline-container-full > #coauthor-count-sparkline-include {
    width: 100%;
    margin-bottom: 0px;
}

#sparkline-container-full .google-visualization-sparkline-default img.google-visualization-sparkline-image {
    max-width: 100%;
}


#body .vis-tables {
    width: 100%;
    margin-bottom: 0px;
}

@media (min-width: 768px) {
    #sparkline-container-full > #publication-count-sparkline-include {
        width: 50%;
        margin-bottom: 15px;
    }
    #sparkline-container-full > #coauthor-count-sparkline-include {
        width: 50%;
        margin-bottom: 15px;
    }
    #body .vis-tables {
        width: 48%;
        margin-bottom: 15px;
    }
}

#graphContainer {
    width: 100%;
    position: relative;
    overflow-x: auto;
    height: 100%;
}

#leftblock {
    width: 100%;
}

#rightblock {
    width: 100%;
    margin-right: 0;
}

@media (min-width: 768px) {
    #leftblock {
        width: 39%;
    }
    
    #rightblock {
        width: 54%;
    }
}

#temporal-graph {
    height: 100%;
    overflow-x: auto;
}

#temporal-graph-response > .blockUI  {
    width: 100%;
    max-width: 420px;
    left: 0;
}


.editingForm > table > tbody > tr {
    text-wrap: wrap;
    line-break: anywhere;
    line-height: unset;
}

table.form-background tr td {
    width: 100%;
    display: block;
}

#wrapper-content > div > div > div > div > table > tbody > tr > td > div > form > div {
    display: flex;
    flex-direction: column;
}

#wrapper-content  table > tbody > tr.header > td.verticalfieldlabel {
    width: 100px;
}

#container section table tbody .subclassCell {
    word-wrap: break-word;
}

table.classHierarchy {
    min-width: auto;
    width: 100%;
    margin-left: 0;
}

section#container div {
    width: initial;
}

section#container div {
    width: initial;
}

#noLocalOntologyExists {
    width: 100%;
}

#noLocalOntologyExists blockquote {
    text-wrap: wrap;
    word-break: break-word;
}

.proxy-profile {
    width: 100%;
}

.proxy-profile .proxy {
    width: 100%;
}

.proxy-profile .profile {
    width: 100%;
    padding-left: 0;
}

@media (min-width: 768px) {
    .proxy-profile .proxy {
        width: 50%;
    }
    
    .proxy-profile .profile {
        width: 50%;
        padding-left: 12px;
    }
}

ul.menuItems {
    max-width: 300px;
    width: initial;
}

section#floatRight {
    width: initial;
}

#managePage #floatRight {
    width: 100%;
    float: unset;
}

#managePage #leftSide {
    width: 100%;
}

@media (min-width: 768px) {
    #managePage #floatRight {
        width: initial;
        float: right;
    }
    
    #managePage #leftSide {
        width: initial;
    }
}

.customForm {
    width: 100%;
    overflow-x: auto;
}

.classHierarchy {
    word-break: break-all;
}

#startup-trace h4, #startup-trace li{
    overflow-wrap: anywhere;
}

#indexer {
    overflow-x: auto;
}

form li {
    overflow-wrap: break-word;
}

